fix: main menu being clipped out of the component

--- a/src/tw-excalidraw/widget.css
+++ b/src/tw-excalidraw/widget.css
@@ -14,3 +14,7 @@
   .zen-mode-transition.App-menu_bottom--transition-left {
   transform: none;
 }
+
+.dropdown-menu-container {
+  height: calc(var(--tw-excalidraw-height) - 100px)
+}
